--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "configargparse>=1.7",
     "mediapipe>=0.10.21",
     "numpy>=1.26.4",
     "opencv-python>=4.11.0.86",
